# sitk-ibex

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.rst  api.html  commandline.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  trufflehog3.yml
.github/workflows/: main.yml  publish.yml
_sources/: api.rst.txt  commandline.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_templates/: layout.html
sitkibex/: __init__.py  __main__.py  about.py  cli.py  globals.py  image_utilities.py  io.py  registration.py  registration_utilities.py  resample.py  xml_info.py
test/: test_cli.py  test_registration.py  test_resample.py  test_utils.py
test/data/: panel1.nrrd  panel2.nrrd  vpanel1.nrrd
utils/: update-gh-pages.sh
